apps/cheese/cheese-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cheese
spec:
  rules:
  - host: stilton.kairen.k8s.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: stilton
          servicePort: http
  - host: cheddar.kairen.k8s.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: cheddar
          servicePort: http
  - host: wensleydale.kairen.k8s.ai
    http:
      paths:
      - path: /
        backend:
          serviceName: wensleydale
          servicePort: http
